test/tests/SuperclassNotFirst.frost
interface Interface {
}

@extendable
class Super {
}

class SuperclassNotFirst : Interface, Super {
}